# torchshapeflow

./: .gitignore  AGENTS.md  Makefile  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-artifacts.yml  ci.yml  docs.yml  release.yml
docs/: agents.md  architecture.md  development.md  extension.md  index.md  limitations.md  operators.md  quickstart.md  releasing.md  syntax.md
examples/: attention_scores.py  error_cases.py  simple_cnn.py  transformer_block.py  vit_patch_embed.py
extensions/vscode/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: client.ts  diagnostics.ts  extension.ts  hover.ts
hooks/: hooks.json  post_edit.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/torchshapeflow/: SKILL.md
scripts/: build_bundled_cli.py  bump_version.py  tsf_entry.py
src/torchshapeflow/: __init__.py  analysis_context.py  analyzer.py  annotations.py  arithmetic.py  ast_helpers.py  cli.py  diagnostics.py  index.py  mcp_server.py  model.py  parser.py  report.py
src/torchshapeflow/analyzer/: __init__.py  calls.py  constants.py  entry.py  expressions.py  functions.py  modules.py  statements.py  tensor_methods.py
src/torchshapeflow/rules/: __init__.py  broadcasting.py  common.py  concat.py  conv2d.py  embedding.py  indexing.py  linalg.py  linear.py  lstm.py  pool2d.py  reshape.py  selection.py  shape_ops.py  transpose.py
src/torchshapeflow/utils/: paths.py
tests/: test_analyzer.py  test_analyzer_diagnostics.py  test_analyzer_eval.py  test_analyzer_features.py  test_analyzer_self_attr.py  test_analyzer_warnings.py  test_annotations.py  test_cli.py  test_concat.py  test_index.py  test_linalg.py  test_mcp_server.py  test_model.py  test_parser.py  test_reshape.py  test_rules.py  test_selection.py  test_shape_ops.py  test_suggest.py  test_transpose.py
tests/interop/: conftest.py  test_mcp_protocol.py  test_real_world_fixtures.py  test_type_checkers.py
tests/interop/fixtures/: bug_linear_in_features.py  bug_matmul_inner.py  clean_cnn.py  clean_transformer.py  clean_typealias.py
