[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "torchshapeflow"
version = "0.4.0"
description = "Static AST-based PyTorch tensor shape analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "TorchShapeFlow Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/Davidxswang/torchshapeflow"
Repository = "https://github.com/Davidxswang/torchshapeflow"
Issues = "https://github.com/Davidxswang/torchshapeflow/issues"
Documentation = "https://davidxswang.github.io/torchshapeflow/"

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.5",
  "mypy>=1.19.1",
  "pyinstaller>=6.16.0",
  "pytest>=9.0.2",
  "ruff>=0.15.6",
]
examples = [
  "torch>=2.10.0",
]

[project.scripts]
tsf = "torchshapeflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/torchshapeflow"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/scripts",
  "/.github",
  "/README.md",
  "/DESIGN.md",
  "/mkdocs.yml",
  "/Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
packages = ["torchshapeflow"]
exclude = [
  "^examples/",
  "^tests/fixtures/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
