[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "torchshapeflow"
version = "0.7.0"
description = "Static AST-based PyTorch tensor shape analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "TorchShapeFlow Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Davidxswang/torchshapeflow"
Repository = "https://github.com/Davidxswang/torchshapeflow"
Issues = "https://github.com/Davidxswang/torchshapeflow/issues"
Documentation = "https://davidxswang.github.io/torchshapeflow/"

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.5",
  "pyinstaller>=6.16.0",
  "pytest>=9.0.2",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.6",
  "ty>=0.0.1a19",
  "pygments>=2.20.0",
  "pymdown-extensions>=10.21.2",
]
examples = [
  "torch>=2.10.0",
]
mcp = [
  "mcp>=1.27.0",
]

[project.scripts]
tsf = "torchshapeflow.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/torchshapeflow"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/scripts",
  "/.github",
  "/README.md",
  "/DESIGN.md",
  "/mkdocs.yml",
  "/Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ty.src]
exclude = [
  "examples",
  "tests/fixtures",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
